--- a/style.css
+++ b/style.css
@@ -6,14 +6,20 @@ padding: 0;
 box-sizing: border-box;
 font-family: "Roboto", sans-serif;
 }
-
 body, html {
 height: 100%;
 scroll-behavior: smooth;
 font-family: Arial, sans-serif;
+background-color: rgb(219, 217, 217);
 }
 h1{
 font-family: 'Bangers', cursive;
-font-size: 110px;
+font-size: 7rem;
 font-weight: 100;
+padding: 10px;
+}
+@media (max-width: 768px) {
+    h1 {
+        font-size: 5rem;
+    }
 }
